--- a/css/styles.css
+++ b/css/styles.css
@@ -65,6 +65,7 @@ button {
 }
 
 .logo {
+    padding: 25px 0 19px 0;
     display: flex;
     align-items: center;
     font-style: normal;
@@ -73,7 +74,7 @@ button {
     line-height: 1.11;
     letter-spacing: -0.03em;
     color: #111111;
-    margin-right: 447px;
+    margin-right: auto;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -114,7 +115,7 @@ button {
 .head-soc-list {
     display: flex;
     gap: 18px;
-    margin-left: auto;
+    margin-left: 90px;
 }
 
 .head-menu-icon {
@@ -336,7 +337,7 @@ button {
     letter-spacing: -0.03em;
     text-transform: uppercase;
     text-align: center;
-    max-width: 441px;
+    max-width: 411px;
     margin-bottom: 28px;
 }
 
@@ -359,7 +360,7 @@ button {
     width: calc((100% - 57px) / 4);
     border: 1px solid #fd9222;
     border-radius: 15px;
-    padding: 28px 32px;
+    padding: 28px;
     position: relative;
     overflow: hidden;
 }
@@ -380,6 +381,11 @@ button {
     transform: translateY(0);
 }
 
+.ingredients-cover-wrap {
+    display: flex;
+    justify-content: center;
+}
+
 .ingredients-image {
     margin-bottom: 36px;
 }
@@ -396,8 +402,8 @@ button {
     position: absolute;
     top: 0;
     left: 0;
-    max-width: 100%;
-    max-height: 100%;
+    width: 100%;
+    height: 100%;
     padding: 20px;
     font-weight: 400;
     font-size: 14px;
@@ -678,163 +684,35 @@ background-color: rgba(255, 255, 255, 0.1);
 }
     /* #endregion footer */
 /* #endregion descktop */
-
-
-
 /* #region tablet */
+@media (max-width: 1167px) {
     /* #region main */
-body {
-    background-color: #fafafa;
-    font-family: "Montserrat", sans-serif;
-    font-size: 14px;
-    color: #111111;
-}
-
 .container {
-    max-width: 1168px;
-    padding: 0 16px;
-    margin: 0 auto;
+    max-width: 736px;
 }
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p {
-    margin-top: 0;
-    margin-bottom: 0;
-}
-
-ul,
-ol {
-    list-style-type: none;
-    margin-top: 0;
-    margin-bottom: 0;
-    padding-left: 0;
-}
-
-a {
-    text-decoration: none;
-}
-
-img {
-    display: block;
-    max-width: 100%;
-    height: auto;
-}
-
-button {
-    font-family: 'Montserrat', sans-serif;
-    cursor: pointer;
-}
-
-.accent {
-    color: #fd9222;
-}
-
-.visually-hidden {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    margin: -1px;
-    border: 0;
-    padding: 0;
-
-    white-space: nowrap;
-    clip-path: inset(100%);
-    clip: rect(0 0 0 0);
-    overflow: hidden;
-}
-
     /* #endregion main */
     /* #region header */
-.header .container {
-    display: flex;
-    align-items: center;
-}
-
 .logo {
-    display: flex;
-    align-items: center;
-    font-style: normal;
-    font-weight: 700;
-    font-size: 18px;
-    line-height: 1.11;
-    letter-spacing: -0.03em;
-    color: #111111;
-    margin-right: 447px;
-}
-
-.logo-accent {
-    font-style: italic;
-    margin-right: 4px;
+    font-size: 14px;
+    line-height: 1.28571;
 }
 
 .logo-icon {
-    margin-left: 4px;
-}
-
-.logo:focus,
-.logo:hover {
-    color: #FD9222;
-}
-
-.header-nav-list {
-    display: flex;
-    gap: 24px;
-}
-
-.header-nav-link {
-    display: block;
-    font-weight: 500;
-    letter-spacing: -0.02em;
-    color: #111111;
-    padding-top: 28px;
-    padding-bottom: 28px;
-}
-
-.header-nav-link:focus,
-.header-nav-link:hover {
-    color: #FD9222;
+    width: 21px;
+    height: 21px;
 }
 
 .head-soc-list {
-    display: flex;
-    gap: 18px;
-    margin-left: auto;
+    margin-left: 48px;
 }
-
-.head-menu-icon {
-    stroke: #111111;
-    fill: none;
-}
-
-.head-soc-item:focus .head-menu-icon,
-.head-soc-item:hover .head-menu-icon {
-    stroke: #FD9222;
-}
-
-.head-menu-btn {
-    display: none;
-}
-
     /* #endregion header */
     /* #region hero */
 .hero {
-    background-color: #1e1823;
     background-image: linear-gradient(rgba(30, 24, 35, 0.4),
             rgba(30, 24, 35, 0.4)),
-        url(../images/bg/hero-bg.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center center;
-    max-width: 1200px;
-    margin-left: auto;
-    margin-right: auto;
-    color: #fff;
-    border-radius: 30px;
+        url(../images/bg/hero-tab-bg.jpg);
+    max-width: 768px;
+    height: 890px;
 }
 
 @media screen and (-webkit-min-device-pixel-ratio: 2),
@@ -843,400 +721,284 @@ button {
     .hero {
         background-image: linear-gradient(rgba(30, 24, 35, 0.4),
                 rgba(30, 24, 35, 0.4)),
-            url(../images/bg/hero-bg-2x.jpg);
+            url(../images/bg/hero-tab-bg-2x.jpg);
     }
 }
 
 .hero .container {
-    padding: 381px 56px 40px 56px;
-
+    padding: 671px 72px 40px 72px;
 }
-
-.hero-title {
-    font-weight: 500;
-    font-size: 28px;
-    line-height: 1.21429;
-    letter-spacing: -0.03em;
-    max-width: 484px;
-    margin-bottom: 32px;
-}
-
-.hero-btn-box {
-    display: flex;
-    align-items: center;
-}
-
-.hero-btn {
-    background: #fd9222;
-    border-radius: 100px;
-    font-weight: 600;
-    color: #fff;
-    margin-right: 14px;
-    padding: 14px 40px;
-    border: none;
-}
-
-.hero-btn:hover,
-.hero-btn:focus {
-    background: #fcf1e0;
-    color: #fd9222;
-}
-
-.hero-btn-link {
-    border: 1px solid #fff;
-    border-radius: 100px;
-    font-weight: 600;
-    color: #fff;
-    padding: 14px 40px;
-}
-
-.hero-btn-link:hover,
-.hero-btn-link:focus {
-    border-color: #fd9222;
-    color: #fd9222;
-}
-
-.hero-link {
-    display: flex;
-    align-items: center;
-    gap: 14px;
-    font-family: "Montserrat", sans-serif;
-    font-weight: 500;
-    line-height: 1.28571;
-    letter-spacing: -0.03em;
-    color: #fff;
-    margin-left: auto;
-}
-
-.hero-link:hover,
-.hero-link:focus {
-    color: #fd9222;
-}
-
-.scroll-btn {
-    background-color: #ffffff;
-    border-radius: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 38px;
-    height: 38px;
-}
-
-.hero-link:hover .scroll-btn,
-.hero-link:focus .scroll-btn {
-    background-color: #fd9222;
-}
-
-.scroll-icon {
-    fill: #FD9222;
-}
-
-.hero-link:hover .scroll-icon,
-.hero-link:focus .scroll-icon {
-    fill: #ffffff;
-}
-
     /* #endregion hero */
     /* #region advantages */
 .advantages {
-    background-color: #1e1823;
-    color: rgba(255, 255, 255, 0.7);
-    padding: 50px 0;
-    margin-top: 72px;
-    margin-bottom: 100px;
-}
-
-.advantages .container {
-    display: flex;
-    justify-content: center;
+    margin-top: 40px;
+    margin-bottom: 80px;
 }
 
 .advantages-list {
-    display: flex;
-    align-items: baseline;
-    gap: 88px;
+    flex-wrap: wrap;
+    gap: 32px;
     width: 1100px;
 }
 
 .advantages-items {
-    width: calc((100% - 176px) / 3);
-    position: relative;
+    width: calc((100% - 32px) / 2);
 }
 
 .advantages-items:not(:last-child)::after {
-    content: '';
-    position: absolute;
-    width: 1px;
-    height: 60%;
-    top: 50%;
-    transform: translateY(-50%);
-    right: -18px;
-    background-color: rgba(255, 255, 255, 0.5);
-
-}
-
-.benefits-item-border {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: transparent;
-    border: 1px solid rgba(255, 255, 255, 0.5);
-    border-radius: 50%;
-    width: 62px;
-    height: 62px;
-    margin-bottom: 22px;
-}
-
-.benefits-item-icon {
-    fill: #FD9222;
-}
-
-.advantages-subtitle {
-    font-weight: 600;
-    font-size: 18px;
-    margin-bottom: 18px;
-    color: #fff;
+    display: none;
 }
 
 .advantages-text {
-    font-weight: 400;
-    letter-spacing: -0.02em;
+    width: 308px;
 }
-
     /* #endregion advantages */
     /* #region ingredients */
 .ingredients .container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-bottom: 100px;
-}
-
-.ingredients-title {
-    font-weight: 600;
-    font-size: 24px;
-    line-height: 1.17;
-    letter-spacing: -0.03em;
-    text-transform: uppercase;
-    text-align: center;
-    max-width: 441px;
-    margin-bottom: 28px;
-}
-
-.ingredients-text {
-    font-weight: 400;
-    line-height: 1.28571;
-    letter-spacing: -0.02em;
-    text-align: center;
-    max-width: 486px;
-    margin-bottom: 50px;
+    margin-bottom: 80px;
 }
 
 .ingredients-list {
-    display: flex;
-    gap: 19px;
+    flex-wrap: wrap;
+    gap: 32px;
 }
 
-.ingredients-item {
-    background-color: transparent;
-    width: calc((100% - 57px) / 4);
-    border: 1px solid #fd9222;
-    border-radius: 15px;
-    padding: 28px 32px;
-    position: relative;
-    overflow: hidden;
-}
-
-.ingredients-item:first-child {
-    border: none;
-    background-color: #FD9222;
-    color: #ffffff;
-}
-
-.ingredients-item:nth-child(3) {
-    border: none;
-    background-color: #1e1823;
-    color: #ffffff;
-}
-
-.ingredients-item:hover .overley {
-    transform: translateY(0);
-}
-
-.ingredients-image {
-    margin-bottom: 36px;
-}
-
-.ingredients-subtitle {
-    font-weight: 600;
-    font-size: 14px;
-    line-height: 1.28571;
-    letter-spacing: -0.02em;
-    text-transform: uppercase;
+.ingredients-item { 
+    width: calc((100% - 32px) / 2);
 }
 
 .overley {
-    position: absolute;
-    top: 0;
-    left: 0;
-    max-width: 100%;
-    max-height: 100%;
-    padding: 20px;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 1.28571;
-    letter-spacing: -0.02em;
-    color: #111;
-    background-color: #ffffff;
-    transform: translateY(100%);
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    padding: 28px;
 }
-
-.overley-title {
-    font-weight: 600;
-    font-size: 18px;
-    letter-spacing: -0.03em;
-    text-transform: uppercase;
-    margin-bottom: 8px;
-}
-
-.overley-btn {
-    display: inline-block;
-    background: #fd9222;
-    border-radius: 35px;
-    padding: 6px 16px;
-    font-family: "Montserrat", sans-serif;
-    font-size: 10px;
-    line-height: 1.2;
-    color: #fff;
-    margin-right: 6px;
-    margin-bottom: 14px;
-}
-
-.overley-link {
-    display: inline-block;
-    border: 1px solid #fd9222;
-    border-radius: 35px;
-    padding: 6px 16px;
-    font-size: 10px;
-    line-height: 1.2;
-}
-
-.overley-text {
-    max-width: 100%;
-}
-
     /* #endregion ingredients */
     /* #region made */
 .made .container {
-    width: 1136px;
-    margin-bottom: 100px;
-}
-
-.made-title {
-    font-weight: 600;
-    font-size: 24px;
-    line-height: 1.17;
-    letter-spacing: -0.03em;
-    text-transform: uppercase;
-    text-align: center;
-    margin-bottom: 50px;
+    width: 736px;
+    margin-bottom: 80px;
 }
 
 .made-wrapper {
-    display: flex;
-    gap: 20px;
-}
-
-.made-img {
-    flex-shrink: 0;
-    border-radius: 15px;
-}
-
-.made-list-conteiner {
-    padding: 32px;
-}
-
-.made-subtitle {
-    font-weight: 600;
-    font-size: 18px;
-    line-height: 1.33;
-    margin-bottom: 28px;
-}
+    flex-direction: column;
+    align-items: center;
+    padding: 0 45px;
+}  
 
 .made-list {
-    display: flex;
-    flex-direction: column;
-    gap: 24px;
+    gap: 18px;
 }
-
-.made-item {
-    display: flex;
-    gap: 8px;
-    align-items: baseline;
-    font-weight: 400;
-    line-height: 1.28571;
-    letter-spacing: -0.02em;
-}
-
-.made-item-svg {
-    flex-shrink: 0;
-}
-
     /* #endregion made */
     /* #region comments */
 .comments .container {
-    width: 1136px;
-    margin-bottom: 100px;
-}
-
-.comments-title {
-    font-weight: 600;
-    font-size: 24px;
-    line-height: 1.16;
-    letter-spacing: -0.03em;
-    text-transform: uppercase;
-    text-align: center;
-    margin-bottom: 90px;
+    width: 736px;
+    margin-bottom: 80px;
 }
 
 .comments-list {
-    display: flex;
-    gap: 24px;
-    margin-bottom: 50px;
+    gap: 16px;
+}
+
+.comments-item:last-child {
+    display: none;
 }
 
 .comments-item {
-    width: calc((100% - 54px) / 3);
-    background-color: #ffffff;
-    box-shadow: 0 9px 100px 0 rgba(17, 17, 17, 0.03);
-    border: 1px solid rgba(17, 17, 17, 0.1);
-    border-radius: 15px;
-    padding: 56px 24px 24px 24px;
-    position: relative;
+    width: calc((100% - 16px) / 2);
+    padding: 56px 16px 26px 16px;
+}
+    /* #endregion comments */
+    /* #region footer */
+.footer .container {
+    max-width: 736px;
 }
 
-.comments-img {
-    position: absolute;
-    top: -40px;
-    left: 50%;
-    transform: translate(-50%);
+.footer-content-box {
+    padding-bottom: 78px;
 }
 
-.comments-subtitle {
-    font-weight: 600;
-    font-size: 18px;
-    line-height: 1.33;
+.footer-nav-list {
+    gap: 16px;
+}
+
+.footer-input {
+    padding: 14px 24px;
+    font-size: 14px;
+    width: 232px;
+}
+
+.footer-sub-btn {
+    padding: 14px 28px;
+}
+    /* #endregion footer */
+}
+/* #endregion tablet */
+
+/* #region mobile  */
+@media (max-width: 735px) {
+    /* #region main */
+.container {
+    max-width: 367px;
+}
+    /* #endregion main */
+    /* #region header */
+.header-nav {
+    display: none;
+}
+
+.head-soc-list {
+    display: none;
+}
+
+.head-menu-btn {
+    padding: 20px 0 14px 0;
+    display: inline-block;
+    background: transparent;
+    border: none;
+}
+    /* #endregion header */
+    /* #region hero */
+.hero {
+    background-image: linear-gradient(rgba(30, 24, 35, 0.4),
+        rgba(30, 24, 35, 0.4)),
+        url(../images/bg/hero-mob-bg.jpg);
+    max-width: 375px;
+    height: 620px;
+}
+
+@media screen and (-webkit-min-device-pixel-ratio: 2),
+(min-resolution: 2dppx),
+(min-resolution: 192dpi) {
+    .hero {
+        background-image: linear-gradient(rgba(30, 24, 35, 0.4),
+            rgba(30, 24, 35, 0.4)),
+            url(../images/bg/hero-mob-bg-2x.jpg);
+    }
+}
+
+.hero .container {
+    padding: 395px 22px 20px 22px;
+}
+
+.hero-title {
+    font-size: 20px;
+    line-height: 1.2;
+    max-width: 290px;
+}
+
+.hero-btn-box {
+    flex-wrap: wrap;
+    gap: 32px 14px;
+}
+
+.hero-btn {
+    padding: 12px 28px;
+    margin-right: 0;
+}
+
+.hero-btn-link {
+    padding: 12px 28px;
+}
+
+.hero-link {
+    gap: 12px;
+    font-size: 12px;
+    line-height: 1.16667;
+    margin-left: 0;
+}
+
+.scroll-btn {
+    width: 28px;
+    height: 28px;
+}
+    /* #endregion hero */
+    /* #region advantages */
+.advantages {
+    margin-top: 60px;
+    margin-bottom: 60px;
+    padding: 20px 0;
+}
+
+.advantages-list {
+    gap: 20px;
+    width: 100%;
+}
+
+.advantages-items {
+    width: 100%;
+    height: 243px;
+}
+    /* #endregion advantages */
+    /* #region ingredients */
+.ingredients .container {
+    margin-bottom: 60px;
+}
+
+.ingredients-title {
+    font-size: 20px;
+    line-height: 1.2;
+    max-width: 283px;
     margin-bottom: 24px;
-    text-align: center;
 }
 
-.comments-text {
-    text-align: center;
-    line-height: 1.28;
-    letter-spacing: -0.02em;
-    color: rgba(17, 17, 17, 0.7);
+.ingredients-text {
+    max-width: 100%;
+    margin-bottom: 32px;
+}
+
+.ingredients-list {
+    gap: 20px;
+}
+
+.ingredients-item {
+    width: 100%;
+}
+    /* #endregion ingredients */
+    /* #region made */
+.made .container {
+    width: 367px;
+    margin-bottom: 60px;
+}
+
+.made-title {
+    font-size: 20px;
+    line-height: 1.2; 
+    margin-bottom: 32px;
+}
+
+.made-wrapper {
+    padding: 0;
+}
+
+.made-list-conteiner {
+    padding: 20px 14px;
+}
+    
+.made-subtitle {
+    margin-bottom: 20px;
+}
+    /* #endregion made */
+    /* #region comments */
+.comments .container {
+    width: 367px;
+    margin-bottom: 60px;
+}
+
+.comments-title {
+    font-size: 20px;
+    line-height: 1.2;
+    margin-bottom: 74px;
+}
+
+.comments-list {
+    margin-bottom: 32px;
+}
+
+.comments-item:nth-child(2) {
+    display: none;
+}
+
+.comments-item {
+    width: 100%;
+    padding: 56px 18px 42px 18px;
 }
 
 .comments-btn {
@@ -1249,118 +1011,40 @@ button {
     margin: 0 auto;
     padding: 14px 40px;
     border-radius: 100px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.comments-btn:hover,
-.comments-btn:focus {
-    background-color: #fd9222;
-    color: #fff;
-    border-color: transparent;
-}
-
     /* #endregion comments */
     /* #region footer */
-.footer {
-    background-color: #1e1823;
-    color: #ffffff;
-}
-
 .footer .container {
-    max-width: 1136px;
-    padding: 50px 16px;
+    max-width: 367px;
 }
 
 .footer-content-box {
-    display: flex;
-    justify-content: space-between;
-    padding-bottom: 74px;
-}
-
-.footer-text {
-    width: 300px;
-    font-weight: 500;
-    font-size: 28px;
-    line-height: 1.21429;
-    letter-spacing: -0.02em;
-}
-
-.footer-contacts {
-    font-style: normal;
-}
-
-.contacts-title {
-    font-weight: 500;
-    line-height: 1.28571;
-    margin-bottom: 14px;
-}
-
-.contacts-link {
-    font-weight: 400;
-    line-height: 1.28571;
-    letter-spacing: -0.02em;
-    color: #ffffff;
+    flex-direction: column;
+    gap: 32px;
+    padding-bottom: 64px;
 }
 
 .footer-nav-box::before {
-    position: absolute;
-    content: " ";
-    width: 100%;
-    height: 1px;
-    top: -24px;
-    left: 0;
-    background-color: rgba(255, 255, 255, 0.1);
+    top: -32px;
 }
 
 .footer-nav-box {
-    position: relative;
-    display: flex;
-    justify-content: space-between;
-}
-
-.footer-nav {
-    display: flex;
-    align-items: center;
-}
-
-.footer-nav-list {
-    display: flex;
-    gap: 24px;
-}
-
-.footer-nav-link {
-    font-weight: 500;
-    line-height: 1.14286;
-    letter-spacing: -0.02em;
-    color: #fff;
-}
-
-.footer-form {
-    display: flex;
-    align-items: center;
-    gap: 8px;
+    flex-direction: column;
+    gap: 32px;
 }
 
 .footer-input {
-    background-color: transparent;
-    border: 1.50px solid rgba(255, 255, 255, 0.15);
-    border-radius: 30px;
-    padding: 15px 24px;
-    font-weight: 400;
-    font-size: 18px;
-    letter-spacing: -0.02em;
-    color: rgba(255, 255, 255, 0.3);
-    width: 265px;
+    padding: 14px 18px;
+    width: 207px;
 }
 
 .footer-sub-btn {
-    border-radius: 100px;
-    padding: 17px 40px;
-    background: #fd9222;
-    font-weight: 600;
-    font-size: 14px;
-    color: #fff;
-    border: none;
+    padding: 14px 24px;
 }
 
     /* #endregion footer */
-/* #endregion descktop */
+}
+
+/* #endregion tablet */
